# wifisniffer

./: .gitignore  .readthedocs.yml  .readthedocs_mkdocs.yml  .readthedocs_sphinx.yml  404.html  ADVANCED_CONFIG.md  ARCHITECTURE.md  CMakeLists.txt  Doxyfile_mkdocs  Doxyfile_sphinx  EXAMPLES.md  LICENSE  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  about_me.html  api_mkdocs_doxygen.html  api_sphinx_doxygen.html  api_sphinx_doxygen_breathe.rst  board.html  command.html  conf.py  index.html  index.rst  index_mkdocs.html  mkdocs.yml  mkdocs_githubaction.yml  mkdocs_readthedocs.html  mkdocs_setup_window.html  mkdocs_setup_wsl.html  read_packets.py  sdkconfig.defaults  sphinx_readthedocs.html  sphinx_requirements.txt  wifi_sniffer0.html  wifi_sniffer1.html  wifi_sniffer2.html  wireshark_0.html
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
components/wifi_sniffer/: CMakeLists.txt  ring_buf.c  ring_buf.h  sniffer.c  wifi.c  wifi_sniffer.c  wifi_sniffer.h
docs/: about_me.md  about_me.rst  api_doxygen.md  api_doxygen_breath.rst  api_mkdocs_doxygen.md  api_sphinx_doxygen.md  api_sphinx_doxygen_breathe.rst  board.md  command.md  conf.py  index.md  index.rst  index_mkdocs.md  mkdocs_readthedoc.md  mkdocs_readthedocs.md  mkdocs_setup.md  mkdocs_setup_window.md  mkdocs_setup_wsl.md  sphinx_readthedocs.md  sphinx_requirements.txt  wifi_sniffer0.md  wifi_sniffer1.md  wifi_sniffer2.md  wireshark_0.md
doxygen/html/: cmd_8c.html  (+91 more)
examples/: README.md  capture_packets.py  save_to_file.sh
main/: CMakeLists.txt  Kconfig.projbuild  cmd.c  cmd.h  idf_component.yml  main.c  ring_buf.c  ring_buf.h  sniffer.c  sniffer.h  usb_cdc.c  usb_cdc.h  usb_gadget.c  usb_gadget.h  wifi.c  wifi.h  wifi_sniffer.c  wifi_sniffer.h  wifisniffer.c
output/: capture_20251101_191050.pcap  capture_20251110_111818.pcap  capture_20251110_112225.pcap  capture_20251124_165203.pcap  capture_20251124_170159.pcap  capture_20251125_182604.pcap  capture_20251125_183509.pcap  capture_20251126_122655.pcap  capture_20251126_122756.pcap  capture_20251126_122910.pcap
search/: search_index.js  search_index.json
tools/: advanced_sniffer.py  capture_to_file.py  sniffer_to_wireshark.py
(+69 files in other folders)
